# twin

./: .gitignore
backend/: context.py  deploy.py  me.txt  pyproject.toml  requirements.txt  resources.py  server.py
backend/data/: facts.json  summary.txt
frontend/: package-lock.json
frontend/components/: twin.tsx
scripts/: deploy.sh  destroy.sh
terraform/: main.tf  outputs.tf  prod.tfvars  terraform.tfvars  variables.tf  versions.tf
