[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.14.1",
    "boto3==1.43.44",
    "botocore==1.43.44",
    "click==8.4.2",
    "colorama==0.4.6 ; sys_platform == 'win32'",
    "fastapi==0.139.0",
    "h11==0.16.0",
    "idna==3.18",
    "jmespath==1.1.0",
    "mangum==0.21.0",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "pypdf==6.14.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.32",
    "s3transfer==0.19.0",
    "six==1.17.0",
    "starlette==1.3.1",
    "typing-extensions==4.16.0",
    "typing-inspection==0.4.2",
    "urllib3==2.7.0",
    "uvicorn==0.51.0",
]
